Fixed missing display:flex to align heading imgs vertically and horizontally (#280)
* fixed missing display:flex to align heading images vertically and horizontally

* Update src/pages/contact/ContactComponent.css

* Adding flex display again

---------

--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -33,6 +33,7 @@
 }
 
 .contact-heading-img-div {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
